# swe-sys_rs

./: .gitignore  Cargo.toml  README.md  build.rs  lib.rs  safe.rs  wrapper.h
swisseph-2.10.03/: swedll.h  sweephe4.c  sweephe4.h  swehouse.h  swemplan.c  swemptab.h  sweph.h
