[package]
name = "swe-sys"
version = "0.1.0"
build = "build.rs"
edition = "2021"
description = "Rust system wrapper for the Swiss Ephemeris C library"
publish = false

[lib]
name = "swe_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
cc = { version = "1.1", features = ['parallel'] }
bindgen = "0.71"
